--- a/CloudShareCKPractice/Base.lproj/Main.storyboard
+++ b/CloudShareCKPractice/Base.lproj/Main.storyboard
@@ -190,6 +190,9 @@
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y85-bu-apa">
                                                     <rect key="frame" x="8" y="8" width="359" height="303.5"/>
                                                     <state key="normal" title="Select Photo"/>
+                                                    <connections>
+                                                        <action selector="selectPhotoButtonTapped:" destination="bom-t5-Mpc" eventType="touchUpInside" id="D7p-NC-0rN"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                             <constraints>
@@ -244,6 +247,9 @@
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rDA-CT-5Sa">
                                                     <rect key="frame" x="8" y="8" width="359" height="27.5"/>
                                                     <state key="normal" title="Add Post"/>
+                                                    <connections>
+                                                        <action selector="addPostButtonTapped:" destination="bom-t5-Mpc" eventType="touchUpInside" id="c1J-nw-ydd"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                             <constraints>
@@ -262,11 +268,22 @@
                             <outlet property="delegate" destination="bom-t5-Mpc" id="0pT-dh-LXw"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="ZNt-KM-HbR"/>
+                    <navigationItem key="navigationItem" id="ZNt-KM-HbR">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="DSh-5W-UG0">
+                            <connections>
+                                <action selector="cancelButtonTapped:" destination="bom-t5-Mpc" id="YbB-PN-H3k"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="imageView" destination="QKa-Tn-xHE" id="Wms-DL-rYX"/>
+                        <outlet property="selectPhotoButton" destination="y85-bu-apa" id="oWQ-6b-jYl"/>
+                        <outlet property="textField" destination="wJ0-fD-Q5X" id="MBv-bL-70k"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Wep-ar-UeE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2512.8000000000002" y="112.89355322338831"/>
+            <point key="canvasLocation" x="2471" y="113"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="A4f-eq-Yvm">
